Fix Popup Dropdown Menu Overflow

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -13,3 +13,9 @@ input::placeholder {
 .search-buttons a.dropdown-item {
   text-transform: capitalize;
 }
+
+.dropdown-menu {
+  max-width: 100vw;
+  white-space: normal;
+  overflow: hidden;
+}
